charts/datacenter/cephobjectstore/templates/cephobjectstore-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rgw
  namespace: openshift-storage
  labels:
    app: rook-ceph-rgw
    ceph_daemon_id: s3a
    rgw: s3a
    rook_cluster: openshift-storage
    rook_object_store: s3a
spec:
  to:
    kind: Service
    name: rook-ceph-rgw-s3a
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  port:
    targetPort: http
  wildcardPolicy: None
