charts/datacenter/cephobjectstore/templates/cephobjectstore.yaml
apiVersion: v1
items:
- apiVersion: ceph.rook.io/v1
  kind: CephObjectStore
  metadata:
    name: ocs-storagecluster-cephobjectstore
    namespace: openshift-storage
  spec:
    dataPool:
      crushRoot: ""
      deviceClass: ""
      erasureCoded:
        algorithm: ""
        codingChunks: 0
        dataChunks: 0
      failureDomain: zone
      replicated:
        size: 3
    gateway:
      allNodes: false
      instances: 2
      placement:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: cluster.ocs.openshift.io/openshift-storage
                operator: Exists
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - rook-ceph-rgw
              topologyKey: kubernetes.io/hostname
            weight: 100
        tolerations:
        - effect: NoSchedule
          key: node.ocs.openshift.io/storage
          operator: Equal
          value: "true"
      port: 80
      resources:
        limits:
          cpu: "2"
          memory: 4Gi
        requests:
          cpu: "1"
          memory: 4Gi
      securePort: 0
      sslCertificateRef: ""
    metadataPool:
      crushRoot: ""
      deviceClass: ""
      erasureCoded:
        algorithm: ""
        codingChunks: 0
        dataChunks: 0
      failureDomain: zone
      replicated:
        size: 3
- kind: Route
  apiVersion: route.openshift.io/v1
  metadata:
    name: s3-rgw
    namespace: openshift-storage
    labels:
      app: rook-ceph-rgw
      ceph_daemon_id: ocs-storagecluster-cephobjectstore
      rgw: ocs-storagecluster-cephobjectstore
      rook_cluster: openshift-storage
      rook_object_store: ocs-storagecluster-cephobjectstore
  spec:
    to:
      kind: Service
      name: rook-ceph-rgw-ocs-storagecluster-cephobjectstore
      weight: 100
    port:
      targetPort: http
    tls:
      termination: edge
      insecureEdgeTerminationPolicy: Allow
    wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
